--- a/WebContent/editUser.xhtml
+++ b/WebContent/editUser.xhtml
@@ -10,26 +10,44 @@
    </h:head>
    <h:body>
    	<h:form id="users">
-   		<p:dataTable var="employee" value="#{login.empList.employees}" id="userList">
+   		<p:dataTable editable="true" var="employee" value="#{login.empList.employees}" id="userList">
+   			<p:ajax event="rowEdit" listener="#{login.onRowEdit}" update=":users:userList"></p:ajax>
+   			<p:ajax event="rowEditInit" listener="#{login.onRowEditInit}" />
    			<p:column headerText="#{msgs.empName}">
-	            <p:inputText value="#{employee.name}" required="true" rendered="#{login.empList.editable}" 
-                            size="5"/>
-                <h:outputText value="#{employee.name}" rendered="#{not login.empList.editable}" />
+   				<p:cellEditor>
+   					<f:facet name="input">
+   						<p:inputText value="#{employee.name}" required="true" size="5"/>
+   					</f:facet>
+	   				<f:facet name="output">
+	   					<h:outputText value="#{employee.name}" />
+	   				</f:facet>
+   				</p:cellEditor>
 		    </p:column>
 		    <p:column headerText="#{msgs.empNum}">
-	            <p:inputText value="#{employee.empNumber}" required="true" rendered="#{login.empList.editable}" 
-                            size="5"/>
-                <h:outputText value="#{employee.empNumber}" rendered="#{not login.empList.editable}" />
+		    	<p:cellEditor>
+   					<f:facet name="input">
+   						<p:inputText value="#{employee.empNumber}" required="true" size="5"/>
+   					</f:facet>
+	   				<f:facet name="output">
+	   					<h:outputText value="#{employee.empNumber}"/>
+	   				</f:facet>
+   				</p:cellEditor>
 		    </p:column>
 		    <p:column headerText="#{msgs.userName}">
-	            <p:inputText value="#{employee.userName}" required="true" rendered="#{login.empList.editable}" 
-                            size="5" />
-                <h:outputText value="#{employee.userName}" rendered="#{not login.empList.editable}" />
+		    	<p:cellEditor>
+   					<f:facet name="input">
+   						<p:inputText value="#{employee.userName}" required="true" size="5" />
+   					</f:facet>
+	   				<f:facet name="output">
+	   					 <h:outputText value="#{employee.userName}" />
+	   				</f:facet>
+   				</p:cellEditor>
+		    </p:column>
+		    <p:column style="width:32px">
+		    	<p:rowEditor />
 		    </p:column>
    		</p:dataTable>
    		<p:commandButton value="Add User" />
-   		<p:commandButton value="Save" action="#{login.empList.save}" update=":users:userList"/>
-   		<p:commandButton value="Edit" action="#{login.empList.edit}" update=":users:userList" />
    		<p:commandButton value="Back" action="#{login.back}" />
    	</h:form>
    </h:body>
